--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "allowImportingTsExtensions": true,
+    
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
